2017/10/housing-guide/css/style.css
HTML, BODY {
  height: 100%;
}

BODY {
  background: #fff;
  background-size: .12em 100%;
  font: 12em/1 'Open Sans';
  color: #313132;
}

section {
	min-height: 600px;
	height: auto;
	padding: 0;
}

.flex-container {
  -webkit-flex-wrap: wrap;
  flex-wrap:         wrap;
  display: flex;
  height: 100vh;
  min-height: 600px;
  vertical-align: middle;


}

.button {
  font-weight: 400;
  font-size: 20px;
  min-width: 50%;
  text-transform: uppercase;
  height: auto;
  padding: 15px;
  border: none;
  border-radius: 3px;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  font-family: 'Prata';
  -webkit-box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
  box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
  color: #FFF;
  background-color: #1a68ae;
}


.icon {
	width: 20%;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	padding: 0;
}

.flex-tile {
	height: 100%;
    width: 50%;
    overflow: hidden;
    -webkit-order: 0; /* Safari */
    order:         0;
    vertical-align: middle;
}

#text-tile {
	text-align: center;
	padding-top: 10%;
	margin-bottom: -10%;
	padding-bottom: 0;
	vertical-align: middle;
}

#text-tile p{
	text-align: left;
}

#photo-tile-on {
	
	background: url(https://bdsglobaldigest.files.wordpress.com/2012/01/upenn3.jpg) no-repeat center bottom ; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#photo-tile-off {
	background: url(http://www.sas.upenn.edu/summer/sites/neutron_sas.summer/files/Gallery_SummerLife_Penn_Campus-2.jpg) no-repeat center bottom ; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#hero {
	background: url(../img/town.png) no-repeat center bottom fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	height: 100%;
	min-height: 700px;
}

#year {
	font-family: 'Prata';
}

h1 {
	text-align: center;
	font: 60px 'Prata';
	color: #1a68ae;
}

p {
	font-size: medium;
	padding: 40px 40px 0px 40px;
	line-height: 20px;
}

hr {
	width: 80%;
	padding: 0;
	margin: 0;
	margin-left: auto;
	margin-right: auto;
	border: 1px solid #313132;
}

.text--line {
  font-size: .5em;
}

svg {
  position: absolute;
  width: 100%;
  height: 100%;
}

.text-copy {
  fill: none;
  stroke: white;
  stroke-dasharray: 7% 28%;
  stroke-width: 3px;
  -webkit-animation: stroke-offset 2s linear;
          animation: stroke-offset 2s linear;
}
.text-copy:nth-child(1) {
  stroke: #1a68ae;
  stroke-dashoffset: 7%;
}
.text-copy:nth-child(2) {
  stroke: #e75234;
  stroke-dashoffset: 14%;
}
.text-copy:nth-child(3) {
  stroke: #e75234;
  stroke-dashoffset: 21%;
}
.text-copy:nth-child(4) {
  stroke: #313132;
  stroke-dashoffset: 28%;
}
.text-copy:nth-child(5) {
  stroke: #1a68ae;
  stroke-dashoffset: 35%;
}

@-webkit-keyframes stroke-offset {
  0% {
    stroke-dashoffset: 35%;
    stroke-dasharray: 0 87.5%;
  }
}

@keyframes stroke-offset {
  0% {
    stroke-dashoffset: 35%;
    stroke-dasharray: 0 87.5%;
  }
}

